ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      # volumes:
      # - name: shared-log-output
        # persistentVolumeClaim:
        #   claimName: first-simple-claim
      containers:
      - name: ping-pong
        image: berkturetkenwartsila/ping_pong:0.5
        # volumeMounts:
        # - name: shared-log-output
        #   mountPath: /usr/src/app/files
